--- a/style.css
+++ b/style.css
@@ -804,7 +804,7 @@ textarea {
   transform: rotate(-90deg);
 }
 .about-faq .accordion .accordion-body {
-  padding: 2px 34px 28px;
+  padding: 2px 34px 9px;
   color: #ffffff;
 }
 .about-faq .list-group-horizontal > .list-group-item.active,
@@ -974,6 +974,10 @@ textarea {
   .swiper-button-prev {
     display: none;
   }
+  .calculation-form {
+    margin-left: auto;
+    margin-right: auto;
+  }
   .calculation-img {
     display: none;
   }
@@ -1014,6 +1018,27 @@ textarea {
   }
   .faq__row {
     flex-direction: column;
+  }
+  .about-faq .accordion .accordion-item .accordion-button {
+    padding: 16px 21px 12px 22px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 125%;
+    gap: 20px;
+  }
+  .about-faq .accordion .accordion-body {
+    padding: 2px 21px 0px;
+  }
+  .about-faq .list-group-horizontal > .list-group-item.active,
+  .about-faq dl,
+  .about-faq ol,
+  .about-faq p,
+  .about-faq ul {
+    margin-top: 0;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 145%;
+    color: #ffffff;
   }
   .faq-form {
     min-width: 335px;
