--- a/style.css
+++ b/style.css
@@ -898,7 +898,6 @@ footer svg {
   font-size: 14px;
   line-height: 162%;
   color: #fff;
-  padding-right: 107px;
   white-space: nowrap;
 }
 
@@ -911,6 +910,7 @@ footer svg {
 
 .footer-container {
   display: flex;
+  gap: 90px;
 }
 
 .footer ol,
